<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.janilla</groupId>
	<artifactId>janilla</artifactId>
	<version>2.0.0-SNAPSHOT</version>
	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<sourceDirectory>./source</sourceDirectory>
		<resources>
			<resource>
				<directory>source</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
	</build>
	<name>Janilla</name>
	<description>A full web solution stack packed into a single lightweight library</description>
	<url>https://github.com/diego-schivo/janilla</url>
	<licenses>
		<license>
			<name>GPL-2.0-only WITH Classpath-exception-2.0</name>
			<url>https://www.gnu.org/licenses/old-licenses/gpl-2.0.txt</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Diego Schivo</name>
			<email>diego.schivo@janilla.com</email>
			<organization>Janilla</organization>
			<organizationUrl>https://janilla.com</organizationUrl>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:git://github.com/diego-schivo/janilla.git</connection>
		<developerConnection>
			scm:git:ssh://git@github.com/diego-schivo/janilla.git</developerConnection>
		<url>https://github.com/diego-schivo/janilla</url>
		<tag>HEAD</tag>
	</scm>
	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.3.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.6.3</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.4</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<gpgArguments>
										<arg>--pinentry-mode</arg>
										<arg>loopback</arg>
									</gpgArguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>0.4.0</version>
						<extensions>true</extensions>
						<configuration>
							<publishingServerId>central</publishingServerId>
							<tokenAuth>true</tokenAuth>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
